src/objects/GeoCodeSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>General Application Settings are stored here</description>
    <fields>
        <fullName>BatchSize__c</fullName>
        <defaultValue>10</defaultValue>
        <description>This is the number of records the BatchGeocodeAccounts class will query for on each instance.  Please note that this is NOT the chunk/batch size!</description>
        <label>BatchSize_Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BingMapsKey__c</fullName>
        <description>This is the API key used to authenticate against Bing Maps</description>
        <label>BingMapsKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeoCodeServiceNames__c</fullName>
        <defaultValue>&quot;Bing,Google,MapQuest&quot;</defaultValue>
        <description>This custom setting is used to decouple the GeoCoder class from the implementation classes.
This is a comma delimited list of GeoCoding service implementations.</description>
        <label>GeoCodeServiceNames</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MapQuestKey__c</fullName>
        <description>This is the key used to authenticate against MapQuest API</description>
        <label>MapQuestKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxLogSize__c</fullName>
        <defaultValue>25</defaultValue>
        <description>This is the number of records to keep in the log object.</description>
        <label>MaxLogSize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>GeoCodeSettings</label>
</CustomObject>